--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@types/dom-screen-wake-lock": "^1.0.1",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
