--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.12",
     "@types/dom-screen-wake-lock": "^1.0.1",
     "next": "latest",
+    "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
