--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "next": "latest",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-swipeable-views": "^0.14.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "@types/react": "18.0.28",
+    "@types/react-swipeable-views": "^0.13.1",
     "@types/testing-library__jest-dom": "5.14.5",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
