--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "@types/react": "18.0.28",
     "@types/react-swipeable-views": "^0.13.1",
     "@types/testing-library__jest-dom": "5.14.5",
+    "eslint": "^8.38.0",
+    "eslint-config-next": "^13.3.0",
+    "eslint-plugin-next": "^0.0.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-testing-library": "^5.10.3",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
     "typescript": "4.9.5"
