Format with prettier
and some minor stuff, like a different color background in dark mode, etc.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^16.2.0",
     "@nextui-org/react": "^1.0.0-beta.12",
     "@types/dom-screen-wake-lock": "^1.0.1",
     "next": "latest",
