Replace NextUI with ChakraUI

--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.5.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@hello-pangea/dnd": "^16.2.0",
-    "@nextui-org/react": "^1.0.0-beta.12",
     "@types/dom-screen-wake-lock": "^1.0.1",
+    "framer-motion": "^10.12.4",
     "next": "latest",
-    "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-swipeable-views": "^0.14.0"
