--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.10.6",
     "@hello-pangea/dnd": "^16.2.0",
     "@types/dom-screen-wake-lock": "^1.0.1",
+    "@types/next-pwa": "^5.6.2",
     "framer-motion": "^10.12.4",
     "next": "latest",
+    "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-swipeable-views": "^0.14.0"
