--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@chakra-ui/react": "^2.5.5",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fontsource/commissioner": "^4.5.10",
+    "@fontsource/dancing-script": "^4.5.11",
     "@hello-pangea/dnd": "^16.2.0",
     "@types/dom-screen-wake-lock": "^1.0.1",
     "@types/next-pwa": "^5.6.2",
