--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "latest",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-swipeable-views": "^0.14.0"
   },
