--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/next-pwa": "^5.6.2",
     "@xstate/react": "^3.2.2",
     "framer-motion": "^10.12.4",
+    "localforage": "^1.10.0",
     "next": "latest",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
