--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@hello-pangea/dnd": "^16.2.0",
     "@types/dom-screen-wake-lock": "^1.0.1",
     "@types/next-pwa": "^5.6.2",
+    "@xstate/immer": "^0.3.2",
     "@xstate/react": "^3.2.2",
     "framer-motion": "^10.12.4",
+    "immer": "^10.0.2",
     "localforage": "^1.10.0",
     "next": "latest",
     "next-pwa": "^5.6.0",
@@ -26,7 +28,8 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-swipeable-views": "^0.14.0",
-    "xstate": "^4.37.2"
+    "xstate": "^4.37.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.4",
