--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@dnd-kit/sortable": "^7.0.2",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@fontsource/commissioner": "^4.5.10",
     "@fontsource/dancing-script": "^4.5.11",
+    "@fontsource/noto-sans": "^5.0.2",
     "@hello-pangea/dnd": "^16.2.0",
     "@types/dom-screen-wake-lock": "^1.0.1",
     "@types/next-pwa": "^5.6.2",
