--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "framer-motion": "^10.12.4",
     "immer": "^10.0.2",
     "localforage": "^1.10.0",
+    "lz-string": "^1.5.0",
     "next": "latest",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-qr-code": "^2.0.11",
     "react-swipeable-views": "^0.14.0",
     "xstate": "^4.37.2",
     "zod": "^3.21.4"
