--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-qr-code": "^2.0.11",
     "react-swipeable-views": "^0.14.0",
+    "use-debounce": "^9.0.4",
     "xstate": "^4.37.2",
     "zod": "^3.21.4"
   },
