--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
+    "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-qr-code": "^2.0.11",
     "react-swipeable-views": "^0.14.0",
